structure of site completed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%-include('./partials/header') %>
 
-    <h1>HOME</h1>
+    <h1>Home</h1>
     <p>
-        <%=sc%>
+        <%=content%>
     </p>
     <%-include('./partials/footer') %>
