--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,8 +1,14 @@
 <%-include('./partials/header') %>
 
     <h1>Compose</h1>
-    <form action="/compose">
-        <input type="text" name="">
-        <button type="submit">Publish</button>
+    <form action="/compose" method="post">
+        <div class="form-group">
+            <label>Title</label>
+            <input type="text" name="postTitle" class="form-control">
+            <label> Post</label>
+            <textarea name="postBody" cols="80" rows="8" class="form-control"></textarea>
+        </div>
+        <button class="btn btn-primary" type="submit">Publish</button>
+
     </form>
     <%-include('./partials/footer') %>
