--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,4 +4,15 @@
     <p>
         <%=content%>
     </p>
-    <%-include('./partials/footer') %>
+
+    <%posts.forEach(function(post){ %>
+        <h1>
+            <%=post.title%>
+        </h1>
+        <p>
+            <%=post.content%>
+        </p>
+
+        <%}) %>
+
+            <%-include( './partials/footer') %>
